--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -22,6 +22,11 @@
 	height:12px;
 }
 
+.warning-icon {
+    width: 2vw;
+    height: 2vw;
+}
+
 .btn-task {
 	padding-left:8px;
 	padding-right:8px;
@@ -38,7 +43,7 @@ height:auto;
     position: fixed; /* Sit on top of the page content */
     height: 0;
     opacity: 0;
-    transition: all 1s ease;
+    transition: all 0.5s ease;
     overflow: hidden;
     width: 100%; /* Full width (cover the whole page) */
     top: 0;
@@ -175,6 +180,10 @@ height:auto;
 
 table {
 width: 100%;
+}
+
+.attachment {
+    margin-left: 0 !important;
 }
 
 .image .img-thumb {
