--- a/src/main/resources/templates/page_view_report.html
+++ b/src/main/resources/templates/page_view_report.html
@@ -22,6 +22,9 @@
     <h1>Raport NPI</h1>
 </div>
 <div class="container bot-margin">
+    <!--<input type="hidden"
+           th:name="${_csrf.parameterName}"
+           th:value="${_csrf.token}"/>-->
     <h1 class="h-margin">
         <p id="id" th:text="${productIdAx + ' ' + productName + ' rev. ' + reportRev}"></p>
     </h1>
