--- a/src/main/resources/templates/problems.html
+++ b/src/main/resources/templates/problems.html
@@ -25,9 +25,9 @@
     <!--<input type="hidden"
            th:name="${_csrf.parameterName}"
            th:value="${_csrf.token}"/>-->
-    <h1 class="h-margin">
+    <h2 class="h-margin">
         <p id="id" th:text="${productIdAx + ' ' + productName + ' rev. ' + reportRev}"></p>
-    </h1>
+    </h2>
     <form action="#" th:action="@{/products}" method="get">
         <div class="input-group mb-3">
             <div class="input-group-prepend">
@@ -44,7 +44,7 @@
         <input type="hidden" name="productId" th:value="${productIdAx}"/>
         <div class="input-group mb-3">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon1">Raport</span>
+                <span class="input-group-text" id="basic-addon2">Raport</span>
             </div>
             <select class="form-control" id="revisionControlSelect" name="reportId">
                 <option th:if="${reportRev} == ${report.revision}" th:each="report : ${reports}"
@@ -361,10 +361,9 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="form-group">
                         <label for="addTaskResponsibleWorkerInput">Odpowiedzialny</label>
-                        <input name="addTaskResponsibleWorkerInput" class="form-control" type="number"
-                               id="addTaskResponsibleWorkerInput" placeholder="Numer Trace"
-                               onkeypress="return event.keyCode != 13;">
-                        </input>
+                        <input name="addTaskResponsibleWorkerInput" class="form-control" type="email"
+                               id="addTaskResponsibleWorkerInput" placeholder="e-mail"
+                               onkeypress="return event.keyCode != 13;" />
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -380,8 +379,7 @@
                     <div class="form-group">
                         <label for="addTaskRequiredDateInput">Wymagana data</label>
                         <input name="addTaskRequiredDateInput" class="form-control" type="date"
-                               id="addTaskRequiredDateInput" placeholder="Numer Trace">
-                        </input>
+                               id="addTaskRequiredDateInput" placeholder="Numer Trace" />
                     </div>
                 </div>
             </div>
@@ -426,10 +424,9 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="form-group">
                         <label for="editTaskResponsibleWorkerInput">Odpowiedzialny</label>
-                        <input name="editTaskResponsibleWorkerInput" class="form-control" type="number"
-                               id="editTaskResponsibleWorkerInput" placeholder="Numer Trace"
-                               onkeypress="return event.keyCode != 13;">
-                        </input>
+                        <input name="editTaskResponsibleWorkerInput" class="form-control" type="email"
+                               id="editTaskResponsibleWorkerInput" placeholder="e-mail"
+                               onkeypress="return event.keyCode != 13;" />
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6">
@@ -446,8 +443,7 @@
                     <div class="form-group">
                         <label for="editTaskRequiredDateInput">Wymagana data</label>
                         <input name="editTaskRequiredDateInput" class="form-control" type="date"
-                               id="editTaskRequiredDateInput" placeholder="Numer Trace">
-                        </input>
+                               id="editTaskRequiredDateInput" placeholder="Numer Trace" />
                     </div>
                 </div>
             </div>
